templates/styles/main.css
body {
  font-family: sans-serif;
}

.header {
  position: fixed;
  left: 0px;
  right: 0px;
  top: 0px;
  z-index: 10;
  color: #fff;
}

.content-positioner {
    position: fixed;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    overflow-x: auto;
    overflow-y: auto;
}

.content {
  width: 44em;
  margin-left:auto;
  margin-right:auto;
}

h1 {
  text-shadow: 2px 2px 4px #000;
  background: #35c8ff;
  background: linear-gradient(0deg, #9ef2f9 0%, #81bffe 100%);
  margin: 0em;
  padding: 0.67em;
  color: white;
  text-align: center;
}

h2 {
  margin-top: 7em;
  padding: 1em;
  background: #9ae4ff;
  border-radius: 0.1em;
}

h3 {
  margin-top: 2em;
  padding-top: 1em;
  border-bottom: 0.1em solid #35c8ff;
}

.top-icon-list {
  margin: 0.3em 1.3em 0em auto;
  width: 33%;
  right: 0px;
  padding: 0.2em;
  text-align:right;
}

.text-icon {
  width: 1.8em;
  vertical-align: bottom;
}

#toc-container {
    position: fixed;
    left: 0px;
    top: 0px;
    border-right: 0.1em solid black;
    border-bottom: 0.1em solid black;
    box-sizing: border-box;
    overflow-y: auto;
    z-index: 20;
    background: #f2f2f2;
}

.toc-open #toc-container {
    height: 100%;
    border-right: 0.2em solid black;
    border-bottom: none;
}

#toc-toggle {
    width: 2em;
    height: 2em;
}

.toc-open #toc-toggle {
    display: none;
}

#toc {
    display: none;
    width: 20em;
}
.toc-open #toc {
    display: block;
}

#toc, #toc ul {
    list-style-type: none;
}

.toc-label {
    margin: 0.2em 0em;
    padding: 0em 0.2em;
    border-radius: 0.5em;
}

.toc-label-indented {
    display: flex;
}

.toc-label-selected {
    background: #35c8ff;
}

.toc-label:hover {
    background: #9ef2f9;
}

.toc-text-indented {
    flex: auto;
}

#toc {
    margin: 0px;
    padding: 0.2em 1em 0.2em 0.2em;
}

.toc-bullet {
    transform: none;
    transition: 250ms linear;
}
.toc-bullet.toc-collapsed {
    transform: rotate(-90deg);
    transition: 100ms linear;
}
ul.toc-collapsed {
    display: none;
}

#toc a, #toc a:hover, #toc a:visited {
    color: inherit;
    text-decoration: none;
}

a.clickable-heading-link, a.clickable-heading-link:hover, a.clickable-heading-link:visited {
    color: inherit;
    text-decoration: none;
}

#toc ul {
    list-style-type: none;
    padding-left: 0.8em;
}

.toc-label-l2.toc-label {
    margin: 0em 0em 0.5em 0em;
    padding: 0.5em 0.25em; /* */
}

.toc-label-l3.toc-label {
    margin: 0em 0em 0.25em 0em;
    padding: 0.25em 0.2em;
}

.toc-label-l4.toc-label, .toc-label-l5.toc-label, .toc-label-l6.toc-label {
    margin: 0em 0em;
    padding: 0.1em 0.1em;
}

.toc-bullet {
    width: 1.1em;
    height: 1.1em;
    cursor: pointer;
    padding-right: 0em;
    vertical-align: middle;
}

.toc-bullet-indented {
    flex: none;
}

.big-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
}

.left-image {
  float: left;
  padding: 0.1em 0.5em 0.1em 0em;
}

.right-image {
  float: right;
  padding: 0.1em 0em 0.1em 0.5em;
}

.centered {
    text-align: center;
}

.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

.footer {
    width: 100%;
    background-color: #35c8ff;
    margin-top: 10em;
    padding: 0.2em 0em;
}

.footer a, .footer a:visited {
    color: #fff;
    border-radius: 0.2em;
    padding: 0.2em 0.2em;
}

.footer a:hover {
    background: #027dfd;
}

.footer #language-text-links {
    text-align: center;
}

.impressum {
  text-align:right;
  padding-right: 0.5em;
}

#top-language-selector {
  position: fixed;
  right: 0px;
  top: 0px;
  z-index: 20;
}

#top-language-selector-img, #top-language-selector-select {
  position: fixed;
  right: 1.4em;
  top: 2.2rem;
  width: 2rem;
  height: 2rem;
}

#top-language-selector-img {
  z-index: 30;
}

#top-language-selector-select {
  z-index: 40;
}

.seethrough {
  opacity: 0;
}

@media print {
    #toc-container, .top-icon-list {
        display: none;
    }
}

@media (max-width: 90em) and (orientation: portrait) {
    body {
        font-size: 150%;
    }

    .toc-open .content-positioner {
        top: 40%;
    }

    .content {
        width: 95%;
    }

    .toc-open #toc-container {
        width: 100%;
        height: 40%;
        border-bottom: 0.2em solid black;
        border-right: none;
        background: white;
    }

    .toc-open #toc {
        width: 100%;
    }

    #toc-toggle {
        width: 3em;
        height: 3em;
    }
}

@media (max-width: 90em) and (orientation: landscape) {
    .content {
        width: 95%;
    }

    .toc-open .content-positioner {
        left: 30%;
    }

    .toc-open #toc-container {
        width: 30%;
        height: 100%;
    }

    .toc-open #toc {
        width: 100%;
    }

    #toc-toggle {
        width: 3em;
        height: 3em;
    }
}

